added vercel ignore and fix new cert card design

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -41,6 +41,8 @@
 
 @@include("templates/modules/certifications.html")
 
+@@include("templates/modules/projects.html")
+
 @@include("templates/modules/services.html")
 
 @@include('templates/modules/skills.html', {
@@ -65,22 +67,22 @@
   "tile_c_value": "JavaScript",
   "tile_c_link": "",
 
-  "tile_d_icon": "✉️",
+  "tile_d_icon": "🎨",
   "tile_d_label": "SASS",
   "tile_d_value": "Syntactically Awesome Stylesheets",
   "tile_d_link": "",
 
-  "tile_e_icon": "✉️",
+  "tile_e_icon": "🖨️",
   "tile_e_label": "Wordpress",
   "tile_e_value": "Advanced Custom Fields (ACF)",
   "tile_e_link": "",
 
-  "tile_f_icon": "✉️",
+  "tile_f_icon": "🤖",
   "tile_f_label": "n8n",
   "tile_f_value": "AI Automation Workflow",
   "tile_f_link": "",
 
-  "tile_g_icon": "✉️",
+  "tile_g_icon": "🧷",
   "tile_g_label": "CRM",
   "tile_g_value": "HubSpot",
   "tile_g_link": "",
