--- a/src/html/shared/header.html
+++ b/src/html/shared/header.html
@@ -9,6 +9,8 @@
             <ul class="nav-menu">
                 <li><a href="#profile" class="nav-link">Profile</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#certifications" class="nav-link">Certifications</a></li>
+                <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#faq" class="nav-link">FAQ</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
