added new tiles values

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -117,6 +117,17 @@
   "tile_d_label": "Outlook",
   "tile_d_value": "msamson19@outlook.com",
   "tile_d_link": "mailto:msamson19@outlook.com",
+
+  "tile_e_icon": "📂",
+  "tile_e_label": "Resume",
+  "tile_e_value": "Download my resume",
+  "tile_e_link": "https://drive.google.com/file/d/1vWlKL_JuwGzMu3mGdMeFdHfmKC1dXX8Z/view?usp=sharing",
+
+  "tile_f_icon": "☕",
+  "tile_f_label": "Buy me a coffee",
+  "tile_f_value": "",
+  "tile_f_link": "https://www.paypal.me/MatthewSamson559",
+
 })
 
 
